--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>TBWA_Honduras(PautaDigital)</title>
+    <title>JMStudio</title>
 
 <link rel="icon" type="image/png" href="imagenes/mifavicon.png" />
 
