--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 
 
-<img src="imagenes/Miranda.png" width="100" height="100">
+<img src="imagenes/Miranda.png" width="50%" height="50%">
 <a> ------------------------ </a><br/>
 
 
