--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   
 
 
-<img src="imagenes/Miranda.png" width="50%" height="50%">
+<img src="imagenes/Miranda.png" width="50" height="50"><br/>
+
 <a> ------------------------ </a><br/>
 
 
