--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <link rel="icon" type="image/png" href="imagenes/mifavicon.png" />
 
   </head>
+
+  <center>
   <body>
   
 
@@ -22,6 +24,7 @@
 
 
   </body>
+   </center>
 </html>
 
 
