--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JMStudio</title>
+    <title>MirandaStudio</title>
 
 <link rel="icon" type="image/png" href="imagenes/mifavicon.png" />
 
@@ -20,6 +20,7 @@
     
 
 <a href="KFC/index.html"> KFC </a> <br/>
+<a href="Dennys/index.html"> Dennys </a> <br/>
 
 
 
