--- a/Dennys/index.html
+++ b/Dennys/index.html
@@ -20,6 +20,8 @@
 
 <a href="JalaBac/index.html"> JalaBac </a> <br/>
 
+<a href="MILKSHAKEPANCAKE/index.html"> MILKSHAKEPANCAKE </a> <br/>
+
 
 
   </body>
