--- a/PizzaHut/index.html
+++ b/PizzaHut/index.html
@@ -6,22 +6,20 @@
 <link rel="icon" type="image/png" href="imagenes/mifavicon.png" />
 
   </head>
-
-  <center>
+   <center>
   <body>
   
 
-
 <img src="imagenes/Miranda.png" width="150" height="150"><br/>
+
 
 <a> ------------------------ </a><br/>
 
 
     
 
-<a href="KFC/index.html"> KFC </a> <br/>
-<a href="Dennys/index.html"> Dennys </a> <br/>
-<a href="PizzaHut/index.html"> PizzaHut </a> <br/>
+<a href="CualquierPizza/index.html"> CualquierPizza </a> <br/>
+
 
 
   </body>
