--- a/PizzaHut/index.html
+++ b/PizzaHut/index.html
@@ -19,6 +19,7 @@
     
 
 <a href="CualquierPizza/index.html"> CualquierPizza </a> <br/>
+<a href="HutBoneless/index.html"> HutBoneless </a> <br/>
 
 
 
