--- a/PizzaHut/index.html
+++ b/PizzaHut/index.html
@@ -20,7 +20,7 @@
 
 <a href="CualquierPizza/index.html"> CualquierPizza </a> <br/>
 <a href="HutBoneless/index.html"> HutBoneless </a> <br/>
-
+<a href="NuevasItalianas/index.html"> NuevasItalianas </a> <br/>
 
 
   </body>
