--- a/KFC/index.html
+++ b/KFC/index.html
@@ -20,6 +20,7 @@
 
 <a href="BigBox/index.html"> BigBox </a> <br/>
 <a href="Iconos/index.html"> Iconos </a> <br/>
+<a href="Spicy/index.html"> Spicy </a> <br/>
 
 
   </body>
