--- a/Dennys/index.html
+++ b/Dennys/index.html
@@ -23,6 +23,7 @@
 <a href="MILKSHAKEPANCAKE/index.html"> MILKSHAKEPANCAKE </a> <br/>
 
 <a href="Cammpeon/index.html"> Cammpeon </a> <br/>
+<a href="NuevosSabores/index.html"> NuevosSabores </a> <br/>
 
 
 
