--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <a href="KFC/index.html"> KFC </a> <br/>
 <a href="Dennys/index.html"> Dennys </a> <br/>
 
-<a href="PizzaHut/index.html"> PizzaHut </a> <br/>
+<a href="PizzaHut/index.html"> PizzaHut hola </a> <br/>
 
 
   </body>
