--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     
 
 <a href="KFC/index.html"> KFC </a> <br/>
-<a href="Dennys/index.html"> Dennys </a> <br/>
+<a href="Dennys/index.html"> Dennysf </a> <br/>
 
 <a href="PizzaHut/index.html"> PizzaHut holaddddd </a> <br/>
 
