--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     
 
 <a href="KFC/index.html"> KFC </a> <br/>
-<a href="Dennys/index.html"> Dennysfeeeeeeee </a> <br/>
+<a href="Dennys/index.html"> Dennys </a> <br/>
 
-<a href="PizzaHut/index.html"> PizzaHut holaddddd </a> <br/>
+<a href="PizzaHut/index.html"> PizzaHut puta</a> <br/>
 
 
   </body>
