--- a/VivaTravel/RentaCar/index.html
+++ b/VivaTravel/RentaCar/index.html
@@ -13,8 +13,11 @@
 
 
     
-<a href="Espana/index.html"> Espana </a> <br/>
-<a href="RentaCar/index.html"> RentaCar </a> <br/>
+<a href="160x600/index.html"> 160x600 </a> <br/>
+<a href="300x250/index.html"> 300x250 </a> <br/>
+<a href="320x50/index.html"> 320x50 </a> <br/>
+<a href="728x90/index.html"> 728x90 </a> <br/>
+
 
 
 
